--- a/wp-content/themes/understrap-child/package.json
+++ b/wp-content/themes/understrap-child/package.json
@@ -51,6 +51,7 @@
     "modular-scale": "^5.1.0",
     "modularscale-sass": "^3.0.8",
     "popper.js": "^1.12.9",
+    "ruby": "^0.6.1",
     "run-sequence": "^2.2.1",
     "sass-convert": "^0.5.2",
     "understrap": "^0.8.2",
