--- a/wp-content/themes/understrap-child/package.json
+++ b/wp-content/themes/understrap-child/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "4.1.0",
     "browser-sync": "^2.26.3",
     "del": "^3.0.0",
+    "fitty": "^2.2.6",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
