post npm update

--- a/.gitignore
+++ b/.gitignore
@@ -124,5 +124,15 @@ dist-product
 
 npm-debug.log
 
+duplicator
+
+duplicator-pro
+
+siteground-migrator
+
+updraftplus
+
+backups-dup-pro
+
 /vendor/
 
