--- a/.gitignore
+++ b/.gitignore
@@ -128,11 +128,11 @@ siteground-migrator
 
 duplicator
 
-duplicator-pro
+duplicator-pro/
 
-updraftplus
+updraftplus/
 
-backups-dup-pro
+backups-dup-pro/
 
 /vendor/
 
